--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,9 @@ input{
   padding:5px;
   margin: 10px;
 }
+.row{
+margin-top: 25px;
+}
 h1{
   width: 100%;
   height: 120px;
@@ -30,5 +33,4 @@ a{
 a:hover{
   color: rgb(142, 187, 187);
   transition: 0ms;
-  padding: 15px;
 }
